dev/k8s/grafana-loki/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: observability
  name: grafana-ingress
  annotations:
    cert-manager.io/cluster-issuer: tls-ca-issuer
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - grafana.testifysec.localhost
      secretName: grafanalocalhost-tls
  rules:
    - host: "grafana.testifysec.localhost"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 80
